--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -3,6 +3,12 @@
 .card-item{
     background: $secondary-color;
     cursor: pointer;
+    transition: all 0.3s;
+
+    &:hover{
+        transform: scale(1.1);
+        transition: all 0.3s;
+    }
 }
 
 .card-top{
@@ -11,6 +17,10 @@
         width: 100%;
         height: 100%;
     }
+}
+
+.card-bottom{
+    padding: 20px;
 }
 
 .card-info{
